# AwesomeChess

./: .clang-format  .gitignore  CMakeLists.txt
.github/workflows/: opengl.yaml
assets/image/: wiki-licence.txt
src/: main.cpp
src/board/: Board.cpp  Board.hpp  CMakeLists.txt  board.cpp  board.hpp
src/display/: Display.hpp
src/game_data_controller/: CMakeLists.txt  GameDataController.cpp  GameDataController.hpp
src/piece/: CMakeLists.txt  Piece.cpp  Piece.hpp
src/piece (depreciated)/: Piece.cpp  Piece.hpp
src/piece_types/: CMakeLists.txt
src/piece_types/bishop/: Bishop.cpp  Bishop.hpp
src/piece_types/king/: King.hpp
src/piece_types/knight/: Knight.hpp
src/piece_types/pawn/: Pawn.hpp
src/piece_types/piece_base/: PieceBase.cpp  PieceBase.hpp
src/piece_types/queen/: Queen.hpp
src/piece_types/rook/: Rook.hpp
src/piece_types/shared/: Piece.cpp  Piece.hpp
src/pieces/: CMakeLists.txt  Pieces.cpp  Pieces.hpp
src/rendering/: CMakeLists.txt  Rendering.cpp  rendering.cpp  rendering.h
src/user_input/: CMakeLists.txt  UserInput.cpp  UserInput.hpp
